🐛 FIX: form title spacing adjustment

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -160,6 +160,7 @@ p {
 }
 
 .title_connexion {
+  letter-spacing: 0.8px;
   position: relative;
   font-size: 2rem;
   margin-bottom: 15px;
